<?xml version="1.0" encoding="utf-8"?>
<!--
    Phase 9.11: NavigationRailView items powering the vertical tab strip
    on the Insights screen. Top-to-bottom matches left-to-right ViewPager2
    page order: Trends, Daily Activity, Mood, Keystroke Dynamics, Habits.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard_tab_trends"
        android:icon="@drawable/ic_dashboard_tab_trends"
        android:title="@string/dashboard_section_trends" />

    <item
        android:id="@+id/dashboard_tab_daily_activity"
        android:icon="@drawable/ic_dashboard_tab_daily_activity"
        android:title="@string/dashboard_section_daily_activity" />

    <item
        android:id="@+id/dashboard_tab_mood"
        android:icon="@drawable/ic_dashboard_tab_mood"
        android:title="@string/dashboard_section_mood" />

    <item
        android:id="@+id/dashboard_tab_keystroke_dynamics"
        android:icon="@drawable/ic_dashboard_tab_keystroke"
        android:title="@string/dashboard_section_keystroke_dynamics" />

    <item
        android:id="@+id/dashboard_tab_habits"
        android:icon="@drawable/ic_dashboard_tab_habits"
        android:title="@string/dashboard_section_habits" />

</menu>
