<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">

    <item
        android:id="@+id/diagnostics_session_insights"
        android:icon="@drawable/ic_insights_vector"
        android:title="@string/diagnostics_session_insights"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/diagnostics_toggle_sensor_view"
        android:icon="@drawable/ic_view_axes_vector"
        android:title="@string/sensor_view_toggle"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/diagnostics_save_csv"
        android:title="@string/diagnostics_save_csv"
        app:showAsAction="never" />

</menu>
